# file-processing

./: .buildinfo  .gitignore  .pylintrc  Demo.ipynb  Dockerfile  README.md  batch_runner_demo.ipynb  developer_requirements.txt  faiss.ipynb  faiss_demo.ipynb  faiss_development.ipynb  full_requirements.txt  genindex.html  index.html  logging_demo.ipynb  logging_setup.py  metadata.csv  objects.inv  optional_requirements.txt  pyproject.toml  report.html  report.xml  report_demo.ipynb  requirements-dev.txt  requirements.txt  search.html  search_directory_demo.ipynb  searchindex.js  setup.py  similarity_demo.ipynb  t.ipynb  table_metrics_ALL.xlsx  temp.csv  temp.ipynb  temp2.csv  temp2.ipynb  test_mock_demo.ipynb  test_output.csv
.devcontainer/: devcontainer.json
.github/: pytest.yml
1_tutorial/: 1_installation.html  2_getting_started.html
2_user_guide/: 1_directory_report.html  2_directory_analytics.html  3_directory_similarity.html  4_directory_filters.html
3_developer_guide/: 1_file_organization.html  2_architecture.html  3_unit_tests.html  4_devops.html  5_deployment.html
4_additional_information/: 1_about.html  2_debugging.html  3_limitations.html  4_citations.html
_sources/: index.rst.txt
demos/: similarity_demo.ipynb
file_processing/: README.md  __init__.py  analytics.csv  analytics.ipynb  analytics_temp.csv  audio_processor.py  corrupted_file.py  csv_processor.py  directory.py  directory2.py  docx_processor.py  errors.py  file.py  file_processor_strategy.py  generic_processor.py  gif_processor.py  heic_processor.py  html_processor.py  jpeg_processor.py  json_processor.py  legacy_directory.py  mp3_processor.py  msg_processor.py  ocr_decorator.py  pdf_processor.py  png_processor.py  pptx_processor.py  pst_processor.py  py_processor.py  pyproject.toml  report.csv  report_filtered.csv  report_no_split.csv  report_temp.csv  report_temp_dir.csv  requirements.txt  rtf_processor.py  sample_report.xlsx  search_directory.py  tiff_processor.py  (+6 more)
generated_tables/: Sk39S8dZXBFg7CtWdgiVeM.tex
resources/: SampleReport.docx  government_of_canada_wikipedia.txt
similarity/: cosine_similarity.py  levenshtein_distance.py
(+321 files in other folders)
