[project]
name = "file_processing_tools"
description = "A metadata extraction tool for various file extensions"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Metadata"]
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}