# to build: python -m build
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file_processing"
description = "A metadata extraction tool for various file extensions"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Metadata"]
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.developer = { file = "developer_requirements.txt" }
optional-dependencies.full = { file = "full_requirements.txt" }
